--- a/local/github-local-dev-op.yaml
+++ b/local/github-local-dev-op.yaml
@@ -2,6 +2,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: github-local-dev
-  namespace: codefresh
+  namespace: ns-codefresh
 spec:
   itemPath: "vaults/Kubernetes/items/github-local-dev"
